# listening-wind-fxsound-engine

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md
docs/: AI游戏音效优化大师-方案C实施计划.md  AI游戏音效优化大师_PRD.md  FAC预设设计说明.md  FxSound_Engine_集成指南.md  听风者_MVP_PRD.md
fac/: cs2.fac  valorant.fac
fxsound-app/audiopassthru/src/AudioPassthru/: AudioPassthruPrivate.cpp
fxsound-app/audiopassthru/src/sndDevices/: sndDevicesDeviceCallbacks.cpp  sndDevicesImplementDeviceRules.cpp  sndDevicesReInit.cpp  sndDevicesReg.cpp
fxsound-app/dsp/: DfxDspEq.cpp  DfxDspPrivate.cpp  DfxDspRegistry.cpp
fxsound-app/dsp/ptComSftDfx/: 0.fac  1.fac  2.fac  3.fac  4.fac
fxsound-app/dsp/ptutil/dfxp/: dfxpEq.cpp  dfxpRegistryStandard.cpp  dfxpSession.cpp
overrides/: codedefs.h
scripts/: publish_release.ps1
src/: crash_handler.cpp  crash_handler.h  driver_manager.cpp  driver_manager.h  fxsound_engine_main.cpp  perf_instrumentation.h
